--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="alpine_climbing">Alpine Climbing</string>
     <string name="load_map_before_adding_route">Map must be loaded before adding a new route.</string>
     <string name="no_route_selected">Please select closest description.</string>
-    <string name="please_zoom_in">Please zoom in more and be more accurate.</string>
+    <string name="please_zoom_in">Not accurate enough.\nZoom in to be more accurate.</string>
     <string name="add_route_activity_title">Add %s Route</string>
     <string name="what_is_route_name">What is the route name?</string>
     <string name="submit">Submit</string>
@@ -40,7 +40,6 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-
     <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
     <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
     <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
